# speech-to-manual

./: .gitignore  README.md  exp.py  manual_pipeline_multistage.py  manual_pipeline_multistage_cli_guide.md  pyproject.toml  requirements.txt
prompts/: clean.txt
refs/: manual_ref.txt
src/speech_to_manual/: __init__.py  cli.py  config.py
src/speech_to_manual/domain/: enums.py  errors.py  models.py  ports.py
src/speech_to_manual/infra/: ffmpeg_tools.py  fs_store.py  ollama_llm.py  openai_llm.py  whisper_stt.py
src/speech_to_manual/services/: chunking.py  pipeline.py  prompt_factory.py  retry.py  validators.py
src/speech_to_manual/utils/: logging.py
tests/: test_chunking.py  test_config.py  test_plan_parser.py
texts/: slova.txt  va.txt
